--- a/漫画频道总目录/漫画(女同)全集/menu.html
+++ b/漫画频道总目录/漫画(女同)全集/menu.html
@@ -25,7 +25,43 @@
     // 设置标题
     document.getElementById("page-title").innerText = folderName + " 资源目录";
     document.title = folderName; // 同时修改网页标签标题
-  </script>
-  <p><a href="https://telegra.ph/%E8%B5%B0%E8%B7%AF%E6%91%87zly---%E9%B8%A3%E6%BD%AE%E5%9D%8E%E7%89%B9%E8%95%BE%E6%8B%89-08-19">走路摇zly - 鸣潮—坎特蕾拉</a></p> 
+  </script> 
+<p><a href="https://telegra.ph/C95-フレンチカンカン-千々石さわ-ふたりのユリイカ-BanG-Dream--Preview-08-28">两个人的尤卡里</a></p>
+<p><a href="https://telegra.ph/C95-ルミノシティ-かにビーム-ルミノシティ22-ご注文はココアさんです-ご注文はうさぎですか--Preview-08-28">(C95) [ルミノシティ (かにビーム)] ルミノシティ22 ご注文はココアさんです。 (ご注文はうさぎですか?) -Preview</a></p>
+<p><a href="https://telegra.ph/ドルチェの冠-坂城-シークレット-ウィークエンド2-ラブライブ-DL版-Preview-08-28">[ドルチェの冠 (坂城)] シークレット ウィークエンド2 (ラブライブ!)  [DL版]-Preview</a></p>
+<p><a href="https://telegra.ph/ドルチェの冠-坂城-シークレット-ウィークエンド-ラブライブ-DL版-Preview-08-28">[ドルチェの冠 (坂城)] シークレット ウィークエンド (ラブライブ!)  [DL版]-Preview</a></p>
+<p><a href="https://telegra.ph/SAKURA-栗原さくら-トワイライトは君のせい-ブルーアーカイブ-DL版-Preview-08-28">[SAKURA (栗原さくら)] トワイライトは君のせい (ブルーアーカイブ)  [DL版]-Preview</a></p>
+<p><a href="https://telegra.ph/baa-baa-sheeps-いぬしだ-てぃーちみー-ユズ-ブルーアーカイブ-DL版-Preview-08-28">[baa-baa-sheeps (いぬしだ)] てぃーちみー ユズ! (ブルーアーカイブ)  [DL版]-Preview</a></p>
+<p><a href="https://telegra.ph/プリンを食べるお馬さん-うつぼのるつぼ-彼女と彼女の幸福原理-魔女は用心棒に恋をした-DL版-Preview-08-28">她与她的幸福原理</a></p>
+<p><a href="https://telegra.ph/C106-Pastag-竹嶋えく水草ぱん-ほんとは一緒にいたいだけ--我其实只是想要和你在一起-Chinese-提黄灯喵汉化组碧蓝档案百合组一青二白汉化组-Preview-08-28"> 我其实，只是想要和你在一起 </a></p>
+<p><a href="https://telegra.ph/iroiroiro-さき千鈴-あいしてるあいしてる愛シテル-東方Project-DL版-Preview-08-28">[iroiroiro (さき千鈴)] あいしてるあいしてる愛シテル (東方Project)  [DL版]-Preview</a></p>
+<p><a href="https://telegra.ph/不揃いの連理-Preview-08-28">不揃いの連理-Preview</a></p>
+<p><a href="https://telegra.ph/Bzskchie-バンパイアの茶会-東方Project--Preview-08-28">[Bzsk.、chie] バンパイアの茶会 (東方Project) -Preview</a></p>
+<p><a href="https://telegra.ph/C94-ゆでたまもち-suい-おねえちゃん症候群-東方Project--Preview-08-28">(C94) [ゆでたまもち (suい)] おねえちゃん症候群 (東方Project) -Preview</a></p>
+<p><a href="https://telegra.ph/C96-フレンチカンカン-千々石さわ-そのとくべつを愛してる-BanG-Dream--Preview-08-28">(C96) [フレンチカンカン (千々石さわ)] そのとくべつを愛してる! (BanG Dream!) -Preview</a></p>
+<p><a href="https://telegra.ph/C93-すにぃる-シュウリン-輝きの目指し方-ラブライブ-サンシャイン--Preview-08-28">(C93) [すにぃる (シュウリン)] 輝きの目指し方 (ラブライブ! サンシャイン!!) -Preview</a></p>
+<p><a href="https://telegra.ph/C87-マヨライス推奨委員会-どどめ色マヨネーズ-ペン入れします--Preview-08-28">(C87) [マヨライス推奨委員会 (どどめ色マヨネーズ)] ペン入れします! -Preview</a></p>
+<p><a href="https://telegra.ph/スシヤ-スシズミ-マジアベーゼのなかよく意味深しないと出られない部屋-魔法少女にあこがれて--Preview-08-28">[スシヤ! (スシズミ)] マジアベーゼのなかよく(意味深)しないと出られない部屋?! (魔法少女にあこがれて) -Preview</a></p>
+<p><a href="https://telegra.ph/hydroxy-灰泥きし-まさかユッキーに押し倒されるなんてヘブンバーンズレッド--Preview-08-28">[hydroxy (灰泥きし)] まさかユッキーに押し倒されるなんて！？(ヘブンバーンズレッド) -Preview</a></p>
+<p><a href="https://telegra.ph/白水重工-白水リコ-ロイヤル動物寓意譚-馬少女ユニコーン-アズールレーン-DL版-Preview-08-28">[白水重工 (白水リコ)] ロイヤル動物寓意譚 馬少女ユニコーン (アズールレーン)  [DL版]-Preview</a></p>
+<p><a href="https://telegra.ph/ぐつとま-タチ-ドMダメ会社員のめぐむんはドSヒモ地雷系のシマちゃんに逆転したい出来ません-DL版-Preview-08-28">[ぐつとま (タチ)] ドMダメ会社員のめぐむんはドSヒモ地雷系のシマちゃんに逆転したい※出来ません。  [DL版]-Preview</a></p>
+<p><a href="https://telegra.ph/Key-Island13-あお-リペイント-ヘブンバーンズレッド--Preview-08-28">(Key Island13) [あお] リペイント (ヘブンバーンズレッド) -Preview</a></p>
+<p><a href="https://telegra.ph/くうねりん-ねがいごと-二次元コミックマガジン-ママ活百合えっち-Vol1-DL版-Preview-08-28">[くうねりん] ねがいごと (二次元コミックマガジン ママ活百合えっち Vol.1)  [DL版]-Preview</a></p>
+<p><a href="https://telegra.ph/紅楼夢11-少女の終わりの幻想郷東方Project-Preview-08-28">(紅楼夢11) 少女の終わりの幻想郷(東方Project)-Preview</a></p>
+<p><a href="https://telegra.ph/蓮空祭3-virophilia-織日ちひろ-グッバイイレギュラー-ラブライブ-蓮ノ空女学院スクールアイドルクラブ--Preview-08-28">(蓮空祭3) [virophilia (織日ちひろ)] グッバイ·イレギュラー (ラブライブ! 蓮ノ空女学院スクールアイドルクラブ) -Preview</a></p>
+<p><a href="https://telegra.ph/ピリオデストラクション-ぴりぷん-バレてますよアイリス様-DL版-Preview-08-28">[ピリオデストラクション (ぴりぷん)] バレてますよアイリス様。  [DL版]-Preview</a></p>
+<p><a href="https://telegra.ph/zacocom-hohonohoho-りなあいマキシマムフォーエバーエターナルラブ-ラブライブ-虹ヶ咲学園スクールアイドル同好会--Preview-08-28">[zacocom (hohonohoho)] りなあいマキシマムフォーエバーエターナルラブ (ラブライブ! 虹ヶ咲学園スクールアイドル同好会) -Preview</a></p>
+<p><a href="https://telegra.ph/秋季例大祭9-里ノ抹茶-さとまち-おかえり私の宝物-東方Project--Preview-08-28">(秋季例大祭9) [里ノ抹茶 (さとまち)] おかえり私の宝物 (東方Project) -Preview</a></p>
+<p><a href="https://telegra.ph/434-Not-Found-isya-Office-Sweet-365-OS1-1CEOCFO-DL版-Preview-08-28">[434 Not Found (isya)] Office Sweet 365 OS1-1:CEO×CFO  [DL版]-Preview</a></p>
+<p><a href="https://telegra.ph/434-Not-Found-isya-Office-Sweet-365-vol2-2-1PlannerPlanner-DL版-Preview-08-28">[434 Not Found (isya)] Office Sweet 365 vol.2 2-1.Planner×Planner  [DL版]-Preview</a></p>
+<p><a href="https://telegra.ph/C102-EDGE-WORTH-ぞくさん-同居でひろがる二人の露華1-ひろがるスカイプリキュア--Preview-08-28">(C102) [EDGE WORTH (ぞくさん)]  同居でひろがる二人の露華1 (ひろがるスカイ!プリキュア) -Preview</a></p>
+<p><a href="https://telegra.ph/C105-Lilioceris-sacrifice-ExtremeLilyPig-あのそよブック1-BanG-Dream-It039s-MyGO--Preview-08-28">(C105) [Lilioceris sacrifice (ExtremeLilyPig)] あのそよブック1 (BanG Dream! It&#039;s MyGO!!!!!) -Preview</a></p>
+<p><a href="https://telegra.ph/どよんど-中村たいやき-神木家その後-DL版-Preview-08-28">[どよんど。 (中村たいやき)] 神木家その後。  [DL版]-Preview</a></p>
+<p><a href="https://telegra.ph/C104-ジョリノリノギー-あいみつ-高らかにうてニ-魔法少女にあこがれて--Preview-08-28">(C104) [ジョリノリノギー (あいみつ)] 高らかにうてニ～ (魔法少女にあこがれて) -Preview</a></p>
+<p><a href="https://telegra.ph/C105-ジャム理科-まどかひふみ-借りたオモチャでxxxxxっ-BanG-Dream-It039s-MyGO--Preview-08-28">(C105) [ジャム理科 (まどかひふみ)] 借りたオモチャでxxxxxっ! (BanG Dream! It&#039;s MyGO!!!!!) -Preview</a></p>
+<p><a href="https://telegra.ph/ばなじニウム-ばなじうむ-BOCCHI-THE-KITACHAN-ぼっちざろっく-DL版-Preview-08-28">[ばなじニウム (ばなじうむ)] BOCCHI THE KITACHAN!! (ぼっち・ざ・ろっく!) [DL版]-Preview</a></p>
+<p><a href="https://telegra.ph/ろーぷあいらんど-みやのゆき-大森さん-24-と氷川さん-24-ハピネスチャージプリキュア-DL版-Preview-08-28">[ろーぷあいらんど (みやのゆき)] 大森さん (24) と氷川さん (24) (ハピネスチャージプリキュア!)  [DL版]-Preview</a></p>
+<p><a href="https://telegra.ph/我が侭なリボン-mattie-少女紀行-マギアレコード-魔法少女まどかマギカ外伝-DL版-Preview-08-28">[我が侭なリボン (mattie)] 少女紀行 (マギアレコード 魔法少女まどか☆マギカ外伝) [DL版]-Preview</a></p>
+
 </body>
 </html>
