--- a/漫画频道总目录/漫画(黑白)全集/menu.html
+++ b/漫画频道总目录/漫画(黑白)全集/menu.html
@@ -38,21 +38,8 @@
   <p><a href="https://telegra.ph/%E3%81%99%E3%81%9F%E3%81%98%E3%81%8A%E5%AF%BF%E5%8F%B8%E3%81%8F%E3%81%84%E3%81%AD%E3%81%87-%E7%90%B4%E5%B3%B6%E3%82%82%E3%81%A8%E3%81%8D-%E8%A0%B1%E6%83%91%E3%81%AE%E9%9C%A7-%E3%83%96%E3%83%AB%E3%83%BC%E3%82%A2%E3%83%BC%E3%82%AB%E3%82%A4%E3%83%96-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3-DL%E7%89%88---Page-1-08-24-2">[すたじお寿司くいねぇ (琴島もとき)] 蠱惑の霧 (ブルーアーカイブ)</a></p>
   <p><a href="https://telegra.ph/%E8%8C%9C%E3%81%97%E3%82%85%E3%81%86%E3%81%B8%E3%81%84%E5%A0%82-%E8%8C%9C%E3%81%97%E3%82%85%E3%81%86%E3%81%B8%E3%81%84-%E5%A5%B3%E5%AD%A6%E5%9C%92%E9%95%B7%E6%98%A5%E9%BA%97%E7%B7%8F%E9%9B%86%E7%B7%A8-%E3%82%B9%E3%83%88%E3%83%AA%E3%83%BC%E3%83%88%E3%83%95%E3%82%A1%E3%82%A4%E3%82%BF%E3%83%BC-DL%E7%89%88%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3%E8%80%83%E5%8F%A4%E5%AD%B8%E5%AE%B6%E6%BC%A2%E5%8C%96---Page-1-08-24-2">[茜しゅうへい堂 (茜しゅうへい)] 女学園長春麗、総集編</a></p>
   <p><a href="https://telegra.ph/C105-%E3%81%95%E3%82%89%E3%81%95%E3%82%89%E3%81%A1%E3%82%83%E3%81%A5%E3%81%91-%E3%81%95%E3%81%A1%E3%82%83-%E3%83%8B%E3%83%A4%E3%83%8B%E3%83%A4%E6%95%99%E6%8E%88%E3%81%AB%E7%90%86%E8%A7%A3%E3%82%89%E3%81%9B-%E3%82%89%E3%82%8C-%E3%81%9F%E3%81%84-%E3%83%96%E3%83%AB%E3%83%BC%E3%82%A2%E3%83%BC%E3%82%AB%E3%82%A4%E3%83%96-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3---Page-1-08-24-2">想让笑面教授能够理解我都苦心</a></p>
-  <p><a href="../index.html">返回当前频道总目录</a></p>
-  <p><a href="../index.html">返回当前频道总目录</a></p>
-  <p><a href="../index.html">返回当前频道总目录</a></p>
-  <p><a href="../index.html">返回当前频道总目录</a></p>
-  <p><a href="../index.html">返回当前频道总目录</a></p>
-  <p><a href="../index.html">返回当前频道总目录</a></p>
-  <p><a href="../index.html">返回当前频道总目录</a></p>
-  <p><a href="../index.html">返回当前频道总目录</a></p>
-  <p><a href="../index.html">返回当前频道总目录</a></p>
-  <p><a href="../index.html">返回当前频道总目录</a></p>
-  <p><a href="../index.html">返回当前频道总目录</a></p>
-  <p><a href="../index.html">返回当前频道总目录</a></p>
-  <p><a href="../index.html">返回当前频道总目录</a></p>
-  <p><a href="../index.html">返回当前频道总目录</a></p>
-  <p><a href="../index.html">返回当前频道总目录</a></p>
-  <p><a href="../index.html">返回当前频道总目录</a></p>
+  <p><a href="https://telegra.ph/%E9%95%BF%E9%80%94%E7%BB%BF%E7%9A%AE%E7%81%AB%E8%BD%A6-08-24">长途绿皮火车</a></p>
+  <p><a href="https://telegra.ph/%E6%99%AE%E6%AE%B5%E3%81%A8%E3%81%AF%E5%B0%91%E3%81%97%E9%81%95%E3%81%86%E3%83%9F%E3%83%9F%E3%83%83%E3%82%AF%E3%82%92%E7%99%BA%E8%A6%8B%E3%81%97%E3%81%9F%E3%83%95%E3%83%AA%E3%83%BC%E3%83%AC%E3%83%B3-%E8%91%AC%E9%80%81%E3%81%AE%E3%83%95%E3%83%AA%E3%83%BC%E3%83%AC%E3%83%B3-%E7%84%A1%E4%BF%AE%E6%AD%A3---Page-1-08-24">“那个RC也是”禁止自慰和画画的生活！？性爱欲旺盛的女高中生，被贞操带控制高潮……“早日康复”</a></p>
+  <p><a href="https://telegra.ph/Grand-Pli%C3%A9-Erohamu-Chikubi-Batsu-%E4%B9%B3%E5%A4%B4%E6%83%A9%E7%BD%9A-Chinese-%E6%9A%B4%E7%A2%A7%E6%B1%89%E5%8C%96%E7%BB%84-08-24">Chikubi Batsu 乳头惩罚</a></p>
 </body>
 </html>
