--- a/advertise.html
+++ b/advertise.html
@@ -43,7 +43,7 @@
     <a href="https://t.me/yunvfuliji" target="_blank" rel="noopener noreferrer">
       玉女宫福利姬频道←点击关注
     </a>
-    <a href="https://t.me/yunvfuliji" target="_blank" rel="noopener noreferrer">
+    <a href="https://t.me/yunvgongmanhua" target="_blank" rel="noopener noreferrer">
       玉女宫漫画频道←点击关注
     </a>
   </p>
