--- a/福利姬频道总目录/HaneAme雨波_全集/menu.html
+++ b/福利姬频道总目录/HaneAme雨波_全集/menu.html
@@ -35,7 +35,7 @@
   <p><a href="https://telegra.ph/Hane-雨波写真---AzurLane-Agir-Chipao-埃吉爾旗袍-08-27">Hane 雨波写真 - AzurLane Agir Chipao 埃吉爾旗袍</a></p>
   <p><a href="https://telegra.ph/Hane-雨波写真---Hololive-Calliope-死神睡衣-08-27">Hane 雨波写真 - Hololive Calliope 死神睡衣</a></p>
   <p><a href="https://telegra.ph/Hane-雨波写真---One-punch-men-FUBUKI-吹雪-08-27">Hane 雨波写真 - One punch men  FUBUKI 吹雪</a></p>
-  <p><a href="https://telegra.ph/Hane-Ame-雨波写真---GenshinImpact-刻晴-08-27">Hane Ame 雨波写真 - GenshinImpact 刻晴</a></p>
+  <p><a href="https://telegra.ph/Hane-Ame-雨波写真---GenshinImpact-刻晴-08-27">Hane Ame 雨波写真 - GenshinImpact 刻晴(原神)</a></p>
   <p><a href="https://telegra.ph/Hane-Ame-雨波写真---BlueArchive-Kisaki-會長-08-27">Hane Ame 雨波写真 - BlueArchive Kisaki 會長</a></p>
   <p><a href="https://telegra.ph/Hane-Ame-雨波写真---OnePiece-Uta-烏塔-08-27">Hane Ame 雨波写真 - OnePiece Uta 烏塔</a></p>
   <p><a href="https://telegra.ph/Hane-Ame-雨波写真---Original-Bunny-Hane-韓國小兔子-08-27">Hane Ame 雨波写真 - Original Bunny Hane 韓國小兔子</a></p>
