--- a/漫画频道总目录/漫画(彩色)全集/menu.html
+++ b/漫画频道总目录/漫画(彩色)全集/menu.html
@@ -27,22 +27,18 @@
     document.title = folderName; // 同时修改网页标签标题
   </script>
 
-  <p><a href="https://telegra.ph/JK%E5%90%9B-%E9%9B%B6%E7%8F%A0-%E8%B6%85%E6%9A%B4%E9%9C%B2%E7%9A%84%E7%B4%84%E6%9C%83-Chinese-08-24">[JK君] 零珠-超暴露的約會 [Chinese]</a></p>
-  <p><a href="https://telegra.ph/LVI-Kuronami-san-Mousou-suru-Chinese-BLUE%E6%B0%AA%E4%B8%AA%E4%BA%BA%E7%BF%BB%E8%AF%91-08-24">[LVI] Kuronami-san Mousou suru [Chinese] [BLUE氪个人翻译]</a></p>
-  <p><a href="https://telegra.ph/ura-macoto-Nawakai-Solo-Beginner-Forced-Bondage-ChoukyouPart-2-%E9%98%BF%E5%8D%A1%E5%A7%86%E6%B1%89%E5%8C%96-08-24">[ura_macoto] Nawakai Solo Beginner Forced Bondage Choukyou:Part 2 [阿卡姆汉化]</a></p>
-  <p><a href="https://telegra.ph/himitsuKoori039s-diary-playing-in-the-parkchinese-08-24">[himitsu]Koori&#039;s diary playing in the park[chinese]</a></p>
-  <p><a href="">“村上海军的屋形（Murakami Navy）”将与假冒的Core Channel进行转职游戏，若输了，就将成为Core Channel当晚的玩物。</a></p>
-  <p><a href="https://telegra.ph/11-08-24-26">[开甲韦一郎] 开拓者变成小孩子了 1-32 (Honkai: Star Rail) [Chinese] - Page 1</a></p>
-  <p><a href="https://telegra.ph/Penti-%E6%B5%B7%E8%B4%BC%E7%8E%8B-Fanbox%E3%81%BE%E3%81%A8%E3%82%81-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3---Page-1-08-24">[Penti] 海贼王 Fanboxまとめ [中国翻訳] - Page 1</a></p>
-  <p><a href="https://telegra.ph/%E3%81%9B%E3%82%8C%E3%81%84%E3%81%A6%E3%82%8B-%E4%BD%B3%E5%A5%88%E3%81%A1%E3%82%83%E3%82%93%E3%82%B7%E3%83%AA%E3%83%BC%E3%82%BA-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3---Page-1-08-24-3">[せれいてる] 佳奈ちゃんシリーズ [中国翻訳] - Page 1</a></p>
-  <p><a href="https://telegra.ph/%E3%81%9B%E3%82%8C%E3%81%84%E3%81%A6%E3%82%8B-%E4%BD%B3%E5%A5%88%E3%81%A1%E3%82%83%E3%82%93%E3%82%B7%E3%83%AA%E3%83%BC%E3%82%BA-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3---Page-2-08-24">[せれいてる] 佳奈ちゃんシリーズ [中国翻訳] - Page 2</a></p>
-  <p><a href="https://telegra.ph/%E3%83%A4%E3%83%AB%E3%82%AF-%E6%82%AA%E5%BE%B3%E6%A4%9C%E6%AD%BB%E5%AE%98%E3%81%AE%E6%89%8B%E5%85%83%E3%81%AB%E5%B1%8A%E3%81%91%E3%81%9F%E3%81%8A%E3%81%8B%E3%81%97%E3%81%84%E3%81%AA%E9%81%BA%E4%BD%93%E3%81%AE%E3%81%8A%E8%A9%B1-1-15-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3---Page-1-08-24-2">[ヤルク] 悪徳検死官の手元に届けたおかしいな遺体のお話 1-15</a></p>
-  <p><a href="https://telegra.ph/%E3%81%BF%E3%81%8F%E3%81%AB%E7%91%9E%E8%B2%B4-%E6%B3%89%E8%8C%89%E8%8E%89%E5%A5%88%E3%81%AF%E7%99%BA%E8%82%B2%E3%81%8C%E8%89%AF%E3%81%99%E3%81%8E%E3%82%8B-COMIC-%E5%BF%AB%E6%A5%BD%E5%A4%A9%E3%83%93%E3%83%BC%E3%82%B9%E3%83%88-2025%E5%B9%B48%E6%9C%88%E5%8F%B7-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3-%E7%84%A1%E4%BF%AE%E6%AD%A3-DL%E7%89%88---Page-1-08-24-2">[みくに瑞貴] 泉茉莉奈は発育が良すぎる</a></p>
-  <p><a href="">异世界英雄洗脑召唤1-1</a></p>
-  <p><a href="https://telegra.ph/HINJYAKU-%E6%B0%97%E3%81%AB%E3%81%AA%E3%81%A3%E3%81%A6%E3%81%84%E3%81%9F%E5%A5%B3%E3%81%AE%E5%AD%90%E3%81%8C%E3%81%84%E3%81%A4%E3%81%AE%E3%81%BE%E3%81%AB%E3%81%8B%E3%82%AD%E3%83%A2%E3%83%96%E3%82%BF%E7%94%B7%E3%81%AE%E3%82%AA%E3%83%81%E3%83%9D%E7%A9%B4%E3%81%AB%E4%BD%9C%E3%82%8A%E5%A4%89%E3%81%88%E3%82%89%E3%82%8C%E3%81%A6%E3%81%84%E3%81%9F%E7%95%B0%E4%B8%96%E7%95%8C%E8%8B%B1%E9%9B%84%E5%8F%AC%E5%96%9A%E6%B4%97%E8%84%B3%E3%82%AF%E3%82%A8%E3%82%B9%E3%83%88-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3-%E9%80%B2%E8%A1%8C%E4%B8%AD---Page-1-2-08-24">异世界英雄洗脑召唤1-2</a></p>
-  <p><a href=""></a></p>
-  <p><a href=""></a></p>
-  <p><a href=""></a></p>
-  <p><a href=""></a></p>
+<p><a href="https://telegra.ph/JK君-零珠-超暴露的約會-御女宫漫画彩色-08-28">[JK君] 零珠-超暴露的約會 御女宫漫画(彩色)</a></p>
+<p><a href="https://telegra.ph/LVI-Kuronami-san-Mousou-suru-BLUE氪个人翻译御女宫漫画彩色-08-28">[LVI] Kuronami-san Mousou suru  [BLUE氪个人翻译]御女宫漫画(彩色)</a></p>
+<p><a href="https://telegra.ph/ura-macoto-Nawakai-Solo-Beginner-Forced-Bondage-ChoukyouPart-2-阿卡姆汉化御女宫漫画彩色-08-28">[ura_macoto] Nawakai Solo Beginner Forced Bondage Choukyou:Part 2 [阿卡姆汉化]御女宫漫画(彩色)</a></p>
+<p><a href="https://telegra.ph/himitsuKoori039s-diary-playing-in-the-parkchinese御女宫漫画彩色-08-28">[himitsu]Koori&#039;s diary playing in the park[chinese]御女宫漫画(彩色)</a></p>
+<p><a href="https://telegra.ph/开甲韦一郎-开拓者变成小孩子了-1-32-Honkai-Star-Rail---Page-1御女宫漫画彩色-08-28">[开甲韦一郎] 开拓者变成小孩子了 1-32 (Honkai: Star Rail)  - Page 1御女宫漫画(彩色)</a></p>
+<p><a href="https://telegra.ph/Penti-海贼王-Fanboxまとめ---Page-1御女宫漫画彩色-08-28">[Penti] 海贼王 Fanboxまとめ  - Page 1御女宫漫画(彩色)</a></p>
+<p><a href="https://telegra.ph/せれいてる-佳奈ちゃんシリーズ---Page-1御女宫漫画彩色-08-28">[せれいてる] 佳奈ちゃんシリーズ  - Page 1御女宫漫画(彩色)</a></p>
+<p><a href="https://telegra.ph/せれいてる-佳奈ちゃんシリーズ---Page-2御女宫漫画彩色-08-28">[せれいてる] 佳奈ちゃんシリーズ  - Page 2御女宫漫画(彩色)</a></p>
+<p><a href="https://telegra.ph/ヤルク-悪徳検死官の手元に届けたおかしいな遺体のお話-1-15---Page-1御女宫漫画彩色-08-28">[ヤルク] 悪徳検死官の手元に届けたおかしいな遺体のお話 1-15  - Page 1御女宫漫画(彩色)</a></p>
+<p><a href="https://telegra.ph/みくに瑞貴-泉茉莉奈は発育が良すぎる-COMIC-快楽天ビースト-2025年8月号-無修正-DL版---Page-1御女宫漫画黑白-08-28">[みくに瑞貴] 泉茉莉奈は発育が良すぎる (COMIC 快楽天ビースト 2025年8月号))  [無修正] [DL版] - Page 1御女宫漫画(黑白)</a></p>
+<p><a href="https://telegra.ph/HINJYAKU-気になっていた女の子がいつのまにかキモブタ男のオチポ穴に作り変えられていた異世界英雄召喚洗脳クエスト-進行中---Page-1-2御女宫漫画黑白-08-28">[HINJYAKU] 気になっていた女の子が、いつのまにかキモブタ男のオチ○ポ穴に作り変えられていた…～異世界英雄召喚洗脳クエスト～  [進行中] - Page 1-2御女宫漫画(黑白)</a></p>
+
+
 </body>
 </html>
