--- a/漫画频道总目录/漫画(黑白)全集/menu.html
+++ b/漫画频道总目录/漫画(黑白)全集/menu.html
@@ -26,20 +26,21 @@
     document.getElementById("page-title").innerText = folderName + " 资源目录";
     document.title = folderName; // 同时修改网页标签标题
   </script>
-  <p><a href="https://telegra.ph/%E6%99%AE%E6%AE%B5%E3%81%A8%E3%81%AF%E5%B0%91%E3%81%97%E9%81%95%E3%81%86%E3%83%9F%E3%83%9F%E3%83%83%E3%82%AF%E3%82%92%E7%99%BA%E8%A6%8B%E3%81%97%E3%81%9F%E3%83%95%E3%83%AA%E3%83%BC%E3%83%AC%E3%83%B3-%E8%91%AC%E9%80%81%E3%81%AE%E3%83%95%E3%83%AA%E3%83%BC%E3%83%AC%E3%83%B3-%E7%84%A1%E4%BF%AE%E6%AD%A3---Page-1-08-24">普段とは少し違うミミックを発見したフリーレン (葬送のフリーレン) [無修正] - Page 1</a></p>
-  <p><a href="https://telegra.ph/Milknium-Family-Otona-Ni-Akogareru-Minarai-Shisuta-no-Kuri-Ochi-Taiko-Nikki-Chinese-5DK%E4%B8%AA%E4%BA%BA%E6%B1%89%E5%8C%96-08-24">对抗日记 Otona Ni Akogareru Minarai Shisuta no Kuri Ochi Taiko Nikki</a></p>
-  <p><a href="https://telegra.ph/%E7%89%9B%E5%A8%98%E5%B0%8F%E5%A7%90-Nise-Ushi-no-Oneesan-Chinese-5DK%E4%B8%AA%E4%BA%BA%E6%B1%89%E5%8C%96-08-24">牛娘小姐 [Nise] Ushi no Oneesan [Chinese]</a></p>
-  <p><a href="https://telegra.ph/RAin-%E5%A5%B4%E9%9A%B6%E5%B0%91%E5%A5%B3%E7%9A%84%E5%8A%B1%E5%BF%97%E4%BA%BA%E7%94%9F-%E4%B8%AD%E5%9B%BD%E8%AA%9E-08-24">[RA.in] 奴隶少女的励志人生 [中国語]</a></p>
-  <p><a href="https://telegra.ph/Ichijikushirabe-Shiki-Shirabe-Shiki-Teikyuu-Zako-Inma-no-Shokushu-ga-Fukai-nanode-Kankaku-Shadan-Mahou-o-Tenkai-Shimashita-wa-Ch-08-24">低级淫魔触手</a></p>
-  <p><a href="https://telegra.ph/%E7%A7%98%E5%AF%86%E9%98%B4%E6%A0%B8%E9%94%BB%E7%82%BC-Milknium-Family-Clitoris-no-Himitsu-Tanren-Massage-Chinese-08-24">秘密阴核锻炼 </a></p>
-  <p><a href="https://telegra.ph/%E8%B0%83%E6%95%99%E5%B0%91%E5%A5%B3%E8%BE%BE%E5%88%B0%E7%BB%9D%E9%A1%B6-no-name-Choukyou-Shoujo-Clitoris-Renzoku-Zecchou-Chinese-5DK%E4%B8%AA%E4%BA%BA%E6%B1%89%E5%8C%96-08-24">调教少女达到绝顶 </a></p>
-  <p><a href="https://telegra.ph/DID%E9%83%A8-VS-BDSM%E9%83%A8-%E9%83%A8%E8%90%BD%E4%BA%89%E5%A4%BA%E6%88%98-ura-macoto-DID-club-VS-BDSM-clubclub-room-battle-DID-part-%E8%B5%B7%E8%90%BD%E5%A7%94%E6%89%98%E9%98%BF%E5%8D%A1%E5%A7%86%E6%B1%89%E5%8C%96-08-24">DID部 VS BDSM部 部落争夺战</a></p>
-  <p><a href="https://telegra.ph/%E6%96%B0%E6%9C%BA%E6%B5%8B%E8%AF%95%E5%91%98-%E9%98%BF%E6%85%88%E8%B0%B7%E6%97%A5%E6%AD%A5%E7%BE%8E-2-The-Notes-E-Note-Machine-Tester-Ajitani-Hifumi-2-Blue-Archive-Chinese-Digital-08-24">新机测试员 阿慈谷日步美 2</a></p>
-  <p><a href="https://telegra.ph/%E3%81%99%E3%81%9F%E3%81%98%E3%81%8A%E5%AF%BF%E5%8F%B8%E3%81%8F%E3%81%84%E3%81%AD%E3%81%87-%E7%90%B4%E5%B3%B6%E3%82%82%E3%81%A8%E3%81%8D-%E8%A0%B1%E6%83%91%E3%81%AE%E9%9C%A7-%E3%83%96%E3%83%AB%E3%83%BC%E3%82%A2%E3%83%BC%E3%82%AB%E3%82%A4%E3%83%96-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3-DL%E7%89%88---Page-1-08-24-2">[すたじお寿司くいねぇ (琴島もとき)] 蠱惑の霧 (ブルーアーカイブ)</a></p>
-  <p><a href="https://telegra.ph/%E8%8C%9C%E3%81%97%E3%82%85%E3%81%86%E3%81%B8%E3%81%84%E5%A0%82-%E8%8C%9C%E3%81%97%E3%82%85%E3%81%86%E3%81%B8%E3%81%84-%E5%A5%B3%E5%AD%A6%E5%9C%92%E9%95%B7%E6%98%A5%E9%BA%97%E7%B7%8F%E9%9B%86%E7%B7%A8-%E3%82%B9%E3%83%88%E3%83%AA%E3%83%BC%E3%83%88%E3%83%95%E3%82%A1%E3%82%A4%E3%82%BF%E3%83%BC-DL%E7%89%88%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3%E8%80%83%E5%8F%A4%E5%AD%B8%E5%AE%B6%E6%BC%A2%E5%8C%96---Page-1-08-24-2">[茜しゅうへい堂 (茜しゅうへい)] 女学園長春麗、総集編</a></p>
-  <p><a href="https://telegra.ph/C105-%E3%81%95%E3%82%89%E3%81%95%E3%82%89%E3%81%A1%E3%82%83%E3%81%A5%E3%81%91-%E3%81%95%E3%81%A1%E3%82%83-%E3%83%8B%E3%83%A4%E3%83%8B%E3%83%A4%E6%95%99%E6%8E%88%E3%81%AB%E7%90%86%E8%A7%A3%E3%82%89%E3%81%9B-%E3%82%89%E3%82%8C-%E3%81%9F%E3%81%84-%E3%83%96%E3%83%AB%E3%83%BC%E3%82%A2%E3%83%BC%E3%82%AB%E3%82%A4%E3%83%96-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3---Page-1-08-24-2">想让笑面教授能够理解我都苦心</a></p>
-  <p><a href="https://telegra.ph/%E9%95%BF%E9%80%94%E7%BB%BF%E7%9A%AE%E7%81%AB%E8%BD%A6-08-24">长途绿皮火车</a></p>
-  <p><a href="https://telegra.ph/%E6%99%AE%E6%AE%B5%E3%81%A8%E3%81%AF%E5%B0%91%E3%81%97%E9%81%95%E3%81%86%E3%83%9F%E3%83%9F%E3%83%83%E3%82%AF%E3%82%92%E7%99%BA%E8%A6%8B%E3%81%97%E3%81%9F%E3%83%95%E3%83%AA%E3%83%BC%E3%83%AC%E3%83%B3-%E8%91%AC%E9%80%81%E3%81%AE%E3%83%95%E3%83%AA%E3%83%BC%E3%83%AC%E3%83%B3-%E7%84%A1%E4%BF%AE%E6%AD%A3---Page-1-08-24">“那个RC也是”禁止自慰和画画的生活！？性爱欲旺盛的女高中生，被贞操带控制高潮……“早日康复”</a></p>
-  <p><a href="https://telegra.ph/Grand-Pli%C3%A9-Erohamu-Chikubi-Batsu-%E4%B9%B3%E5%A4%B4%E6%83%A9%E7%BD%9A-Chinese-%E6%9A%B4%E7%A2%A7%E6%B1%89%E5%8C%96%E7%BB%84-08-24">Chikubi Batsu 乳头惩罚</a></p>
+<p><a href="https://telegra.ph/普段とは少し違うミミックを発見したフリーレン-葬送のフリーレン---Page-1-08-28">普段とは少し違うミミックを発見したフリーレン (葬送のフリーレン)  - Page 1</a></p>
+<p><a href="https://telegra.ph/Milknium-Family-Otona-Ni-Akogareru-Minarai-Shisuta-no-Kuri-Ochi-Taiko-Nikki-08-28">[Milknium Family] Otona Ni Akogareru Minarai Shisuta no Kuri Ochi Taiko Nikki</a></p>
+<p><a href="https://telegra.ph/牛娘小姐-Nise-Ushi-no-Oneesan-08-28">牛娘小姐 [Nise] Ushi no Oneesan</a></p>
+<p><a href="https://telegra.ph/RAin-奴隶少女的励志人生-08-28">[RA.in] 奴隶少女的励志人生</a></p>
+<p><a href="https://telegra.ph/Ichijikushirabe-Shiki-Shirabe-Shiki-Teikyuu-Zako-Inma-no-Shokushu-ga-Fukai-nanode-Kankaku-Shadan-Mahou-o-Tenkai-Shimashita-wa-En-08-28-3">[Ichijikushirabe Shiki (Shirabe Shiki)] Teikyuu Zako Inma no Shokushu ga Fukai nanode Kankaku Shadan Mahou o Tenkai Shimashita wa!!  [Entiendio汉化,风间仁重嵌] [Decensored]</a></p>
+<p><a href="https://telegra.ph/秘密阴核锻炼-Milknium-Family-Clitoris-no-Himitsu-Tanren-Massage-08-28">秘密阴核锻炼 [Milknium Family] Clitoris no Himitsu Tanren Massage</a></p>
+<p><a href="https://telegra.ph/调教少女达到绝顶-no-name-Choukyou-Shoujo-Clitoris-Renzoku-Zecchou-08-28">调教少女达到绝顶 [no name] Choukyou Shoujo Clitoris Renzoku Zecchou</a></p>
+<p><a href="https://telegra.ph/DID部-VS-BDSM部-部落争夺战-ura-macoto-DID-club-VS-BDSM-clubclub-room-battle-DID-part-起落委托阿卡姆汉化-08-28">DID部 VS BDSM部 部落争夺战 [ura_macoto] DID club VS BDSM club・club room battle (DID part) [起落委托|阿卡姆汉化]</a></p>
+<p><a href="https://telegra.ph/新机测试员-阿慈谷日步美-2-The-Notes-E-Note-Machine-Tester-Ajitani-Hifumi-2-Blue-Archive-Digital-08-28">新机测试员 阿慈谷日步美 2 [The-Notes (E-Note)] Machine Tester Ajitani Hifumi 2 (Blue Archive)  [Digital]</a></p>
+<p><a href="https://telegra.ph/すたじお寿司くいねぇ-琴島もとき-蠱惑の霧-ブルーアーカイブ-DL版---Page-1-08-28">[すたじお寿司くいねぇ (琴島もとき)] 蠱惑の霧 (ブルーアーカイブ)  [DL版] - Page 1</a></p>
+<p><a href="https://telegra.ph/茜しゅうへい堂-茜しゅうへい-女学園長春麗総集編-ストリートファイター-DL版考古學家漢化---Page-1-08-28">[茜しゅうへい堂 (茜しゅうへい)] 女学園長春麗、総集編 (ストリートファイター) [DL版][考古學家漢化] - Page 1</a></p>
+<p><a href="https://telegra.ph/C105-さらさらちゃづけ-さちゃ-ニヤニヤ教授に理解らせ-られ-たい-ブルーアーカイブ---Page-1-08-28">(C105) [さらさらちゃづけ (さちゃ)] ニヤニヤ教授に理解らせ (られ) たい (ブルーアーカイブ)  - Page 1</a></p>
+<p><a href="https://telegra.ph/长途绿皮火车-08-28-2">长途绿皮火车</a></p>
+<p><a href="https://telegra.ph/普段とは少し違うミミックを発見したフリーレン-葬送のフリーレン---Page-1-08-28-2">普段とは少し違うミミックを発見したフリーレン (葬送のフリーレン)  - Page 1</a></p>
+<p><a href="https://telegra.ph/Grand-Plié-Erohamu-Chikubi-Batsu-乳头惩罚-08-28">[Grand Plié. (Erohamu)] Chikubi Batsu 乳头惩罚</a></p>
+
 </body>
 </html>
