--- a/小说频道总目录/index.html
+++ b/小说频道总目录/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="advertiseStyle.css">
+  <link rel="stylesheet" href="../advertiseStyle.css">
+  <title></title>
 </head>
 <body>
   <h1 id="page-title"></h1>
   <div id="advertise">
-    <object data="advertise.html" type="text/html"></object>
+    <object data="../advertise.html" type="text/html"></object>
+    <p><a class="back-link" href="../index.html">← 返回所有频道总目录</a></p>
   </div>
   <hr>
   <script>
@@ -17,13 +19,10 @@
     // 取倒数第二个部分作为目录名
     let folderName = decodeURIComponent(pathParts[pathParts.length - 2]);
     // 设置标题
-    document.getElementById("page-title").innerText = folderName + "频道首页";
+    document.getElementById("page-title").innerText = folderName + " 资源目录";
     document.title = folderName; // 同时修改网页标签标题
   </script>
-  <h2>频道目录首页</h2>
-  <p><a href="./代码/index.html">代码</a></p> 
-  <p><a href="./小说频道总目录/index.html">小说频道总目录</a></p> 
-  <p><a href="./漫画频道总目录/index.html">漫画频道总目录</a></p> 
-  <p><a href="./福利姬频道总目录/index.html">福利姬频道总目录</a></p> 
+  <h2>福利姬频道目录</h2>
+  <p><a href="./短篇小说/menu.html">短篇小说</a></p> 
 </body>
 </html>
