--- a/advertise.html
+++ b/advertise.html
@@ -41,10 +41,13 @@
 
   <p class="channels">
     <a href="https://t.me/yunvfuliji" target="_blank" rel="noopener noreferrer">
-      玉女宫福利姬频道←点击关注
+      御女宫福利姬频道←点击关注
     </a>
     <a href="https://t.me/yunvgongmanhua" target="_blank" rel="noopener noreferrer">
-      玉女宫漫画频道←点击关注
+      御女宫漫画频道←点击关注
+    </a>
+	<a href="https://t.me/yunvgongxiaoshuo" target="_blank" rel="noopener noreferrer">
+      御女宫小说频道←点击关注
     </a>
   </p>
 </body>
