--- a/小说频道总目录/短篇小说/menu.html
+++ b/小说频道总目录/短篇小说/menu.html
@@ -26,20 +26,105 @@
     document.getElementById("page-title").innerText = folderName + " 资源目录";
     document.title = folderName; // 同时修改网页标签标题
   </script>
-
-  <p><a href="https://telegra.ph/JK%E5%90%9B-%E9%9B%B6%E7%8F%A0-%E8%B6%85%E6%9A%B4%E9%9C%B2%E7%9A%84%E7%B4%84%E6%9C%83-Chinese-08-24">[JK君] 零珠-超暴露的約會 [Chinese]</a></p>
-  <p><a href="https://telegra.ph/LVI-Kuronami-san-Mousou-suru-Chinese-BLUE%E6%B0%AA%E4%B8%AA%E4%BA%BA%E7%BF%BB%E8%AF%91-08-24">[LVI] Kuronami-san Mousou suru [Chinese] [BLUE氪个人翻译]</a></p>
-  <p><a href="https://telegra.ph/ura-macoto-Nawakai-Solo-Beginner-Forced-Bondage-ChoukyouPart-2-%E9%98%BF%E5%8D%A1%E5%A7%86%E6%B1%89%E5%8C%96-08-24">[ura_macoto] Nawakai Solo Beginner Forced Bondage Choukyou:Part 2 [阿卡姆汉化]</a></p>
-  <p><a href="https://telegra.ph/himitsuKoori039s-diary-playing-in-the-parkchinese-08-24">[himitsu]Koori&#039;s diary playing in the park[chinese]</a></p>
-  <p><a href="">“村上海军的屋形（Murakami Navy）”将与假冒的Core Channel进行转职游戏，若输了，就将成为Core Channel当晚的玩物。</a></p>
-  <p><a href="https://telegra.ph/11-08-24-26">[开甲韦一郎] 开拓者变成小孩子了 1-32 (Honkai: Star Rail) [Chinese] - Page 1</a></p>
-  <p><a href="https://telegra.ph/Penti-%E6%B5%B7%E8%B4%BC%E7%8E%8B-Fanbox%E3%81%BE%E3%81%A8%E3%82%81-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3---Page-1-08-24">[Penti] 海贼王 Fanboxまとめ [中国翻訳] - Page 1</a></p>
-  <p><a href="https://telegra.ph/%E3%81%9B%E3%82%8C%E3%81%84%E3%81%A6%E3%82%8B-%E4%BD%B3%E5%A5%88%E3%81%A1%E3%82%83%E3%82%93%E3%82%B7%E3%83%AA%E3%83%BC%E3%82%BA-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3---Page-1-08-24-3">[せれいてる] 佳奈ちゃんシリーズ [中国翻訳] - Page 1</a></p>
-  <p><a href="https://telegra.ph/%E3%81%9B%E3%82%8C%E3%81%84%E3%81%A6%E3%82%8B-%E4%BD%B3%E5%A5%88%E3%81%A1%E3%82%83%E3%82%93%E3%82%B7%E3%83%AA%E3%83%BC%E3%82%BA-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3---Page-2-08-24">[せれいてる] 佳奈ちゃんシリーズ [中国翻訳] - Page 2</a></p>
-  <p><a href="https://telegra.ph/%E3%83%A4%E3%83%AB%E3%82%AF-%E6%82%AA%E5%BE%B3%E6%A4%9C%E6%AD%BB%E5%AE%98%E3%81%AE%E6%89%8B%E5%85%83%E3%81%AB%E5%B1%8A%E3%81%91%E3%81%9F%E3%81%8A%E3%81%8B%E3%81%97%E3%81%84%E3%81%AA%E9%81%BA%E4%BD%93%E3%81%AE%E3%81%8A%E8%A9%B1-1-15-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3---Page-1-08-24-2">[ヤルク] 悪徳検死官の手元に届けたおかしいな遺体のお話 1-15</a></p>
-  <p><a href="https://telegra.ph/%E3%81%BF%E3%81%8F%E3%81%AB%E7%91%9E%E8%B2%B4-%E6%B3%89%E8%8C%89%E8%8E%89%E5%A5%88%E3%81%AF%E7%99%BA%E8%82%B2%E3%81%8C%E8%89%AF%E3%81%99%E3%81%8E%E3%82%8B-COMIC-%E5%BF%AB%E6%A5%BD%E5%A4%A9%E3%83%93%E3%83%BC%E3%82%B9%E3%83%88-2025%E5%B9%B48%E6%9C%88%E5%8F%B7-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3-%E7%84%A1%E4%BF%AE%E6%AD%A3-DL%E7%89%88---Page-1-08-24-2">[みくに瑞貴] 泉茉莉奈は発育が良すぎる</a></p>
-  <p><a href="">异世界英雄洗脑召唤1-1</a></p>
-  <p><a href="https://telegra.ph/HINJYAKU-%E6%B0%97%E3%81%AB%E3%81%AA%E3%81%A3%E3%81%A6%E3%81%84%E3%81%9F%E5%A5%B3%E3%81%AE%E5%AD%90%E3%81%8C%E3%81%84%E3%81%A4%E3%81%AE%E3%81%BE%E3%81%AB%E3%81%8B%E3%82%AD%E3%83%A2%E3%83%96%E3%82%BF%E7%94%B7%E3%81%AE%E3%82%AA%E3%83%81%E3%83%9D%E7%A9%B4%E3%81%AB%E4%BD%9C%E3%82%8A%E5%A4%89%E3%81%88%E3%82%89%E3%82%8C%E3%81%A6%E3%81%84%E3%81%9F%E7%95%B0%E4%B8%96%E7%95%8C%E8%8B%B1%E9%9B%84%E5%8F%AC%E5%96%9A%E6%B4%97%E8%84%B3%E3%82%AF%E3%82%A8%E3%82%B9%E3%83%88-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3-%E9%80%B2%E8%A1%8C%E4%B8%AD---Page-1-2-08-24">异世界英雄洗脑召唤1-2</a></p>
-
+<p><a href="https://telegra.ph/三十五歲的熟女-08-29">三十五歲的熟女</a></p>
+<p><a href="https://telegra.ph/鄰家尤物-08-29">鄰家尤物</a></p>
+<p><a href="https://telegra.ph/鄰家尤物2-08-29">鄰家尤物2</a></p>
+<p><a href="https://telegra.ph/我濕濕的老婆-08-29">我濕濕的老婆</a></p>
+<p><a href="https://telegra.ph/舊夢新歡-08-29">舊夢新歡</a></p>
+<p><a href="https://telegra.ph/舊夢新歡2-08-29">舊夢新歡2</a></p>
+<p><a href="https://telegra.ph/風流劍客-08-29">風流劍客</a></p>
+<p><a href="https://telegra.ph/風流劍客2-08-29">風流劍客2</a></p>
+<p><a href="https://telegra.ph/風流劍客3-08-29">風流劍客3</a></p>
+<p><a href="https://telegra.ph/偷情星期日-08-29">偷情星期日</a></p>
+<p><a href="https://telegra.ph/十八歲-08-29">十八歲</a></p>
+<p><a href="https://telegra.ph/美妹與兄-08-29">美妹與兄</a></p>
+<p><a href="https://telegra.ph/美妹與兄2-08-29">美妹與兄2</a></p>
+<p><a href="https://telegra.ph/淫虐白衣天使-08-29">淫虐白衣天使</a></p>
+<p><a href="https://telegra.ph/淫虐白衣天使2-08-29">淫虐白衣天使2</a></p>
+<p><a href="https://telegra.ph/淫虐白衣天使3-08-29">淫虐白衣天使3</a></p>
+<p><a href="https://telegra.ph/淫虐白衣天使4-08-29">淫虐白衣天使4</a></p>
+<p><a href="https://telegra.ph/幸運的姐夫-08-29">幸運的姐夫</a></p>
+<p><a href="https://telegra.ph/香港淫蕩女學生-08-29">香港淫蕩女學生</a></p>
+<p><a href="https://telegra.ph/香港淫蕩女學生2-08-29">香港淫蕩女學生2</a></p>
+<p><a href="https://telegra.ph/窺視偷情姐姐-08-29">窺視偷情姐姐</a></p>
+<p><a href="https://telegra.ph/綺麗姐姐-08-29">綺麗姐姐</a></p>
+<p><a href="https://telegra.ph/選美冠軍-08-29">選美冠軍</a></p>
+<p><a href="https://telegra.ph/駕訓班情緣-08-29">駕訓班情緣</a></p>
+<p><a href="https://telegra.ph/亂之奇想-08-29">亂之奇想</a></p>
+<p><a href="https://telegra.ph/趁女友不在-給她同事吃春藥-08-29">趁女友不在 給她同事吃春藥</a></p>
+<p><a href="https://telegra.ph/單身的日子-08-29">單身的日子</a></p>
+<p><a href="https://telegra.ph/單身的日子2-08-29">單身的日子2</a></p>
+<p><a href="https://telegra.ph/單身的日子3-08-29">單身的日子3</a></p>
+<p><a href="https://telegra.ph/單身的日子4-08-29">單身的日子4</a></p>
+<p><a href="https://telegra.ph/單身的日子5-08-29">單身的日子5</a></p>
+<p><a href="https://telegra.ph/單身的日子6-08-29">單身的日子6</a></p>
+<p><a href="https://telegra.ph/美嬌公關Maggy-08-29">美嬌公關Maggy</a></p>
+<p><a href="https://telegra.ph/孕婦淑珍-08-29">孕婦淑珍</a></p>
+<p><a href="https://telegra.ph/大方的嫂子素玫-08-29">大方的嫂子‧素玫</a></p>
+<p><a href="https://telegra.ph/內褲奇緣-08-29">內褲奇緣</a></p>
+<p><a href="https://telegra.ph/內褲奇緣2-08-29">內褲奇緣2</a></p>
+<p><a href="https://telegra.ph/內褲奇緣3-08-29">內褲奇緣3</a></p>
+<p><a href="https://telegra.ph/內褲奇緣4-08-29">內褲奇緣4</a></p>
+<p><a href="https://telegra.ph/內褲奇緣5-08-29">內褲奇緣5</a></p>
+<p><a href="https://telegra.ph/內褲奇緣6-08-29">內褲奇緣6</a></p>
+<p><a href="https://telegra.ph/別人的老婆總是最有味道-08-29">別人的老婆總是最有味道</a></p>
+<p><a href="https://telegra.ph/春情少女-08-29">春情少女</a></p>
+<p><a href="https://telegra.ph/春情少女4-08-29">春情少女4</a></p>
+<p><a href="https://telegra.ph/春情少女6-08-29">春情少女6</a></p>
+<p><a href="https://telegra.ph/春情少女7-08-29">春情少女7</a></p>
+<p><a href="https://telegra.ph/春情少女8-08-29">春情少女8</a></p>
+<p><a href="https://telegra.ph/打工淫傳-08-29">打工淫傳</a></p>
+<p><a href="https://telegra.ph/打工淫傳2-08-29">打工淫傳2</a></p>
+<p><a href="https://telegra.ph/打工淫傳3-08-29">打工淫傳3</a></p>
+<p><a href="https://telegra.ph/打工淫傳4-08-29">打工淫傳4</a></p>
+<p><a href="https://telegra.ph/打工淫傳5-08-29">打工淫傳5</a></p>
+<p><a href="https://telegra.ph/打工淫傳6-08-29">打工淫傳6</a></p>
+<p><a href="https://telegra.ph/班上春色-08-29">班上春色</a></p>
+<p><a href="https://telegra.ph/班上春色2-08-29">班上春色2</a></p>
+<p><a href="https://telegra.ph/班上春色3-08-29">班上春色3</a></p>
+<p><a href="https://telegra.ph/班上春色4-08-29">班上春色4</a></p>
+<p><a href="https://telegra.ph/圖書館的叫聲-08-29">圖書館的叫聲</a></p>
+<p><a href="https://telegra.ph/浴室強暴高校女生-08-29">浴室強暴高校女生</a></p>
+<p><a href="https://telegra.ph/2個妙齡女教師-08-29">2個妙齡女教師</a></p>
+<p><a href="https://telegra.ph/2個妙齡女教師2-08-29">2個妙齡女教師2</a></p>
+<p><a href="https://telegra.ph/美艷的新級任老師-08-29">美艷的新級任老師</a></p>
+<p><a href="https://telegra.ph/風流小子-08-29">風流小子</a></p>
+<p><a href="https://telegra.ph/風流小子2-08-29">風流小子2</a></p>
+<p><a href="https://telegra.ph/風流小子3-08-29">風流小子3</a></p>
+<p><a href="https://telegra.ph/風流小子4-08-29">風流小子4</a></p>
+<p><a href="https://telegra.ph/風流小子5-08-29">風流小子5</a></p>
+<p><a href="https://telegra.ph/風流小子6-08-29">風流小子6</a></p>
+<p><a href="https://telegra.ph/老婆你快樂嗎-08-29">老婆，你快樂嗎？</a></p>
+<p><a href="https://telegra.ph/老婆你快樂嗎2-08-29">老婆，你快樂嗎？2</a></p>
+<p><a href="https://telegra.ph/老婆你快樂嗎3-08-29">老婆，你快樂嗎？3</a></p>
+<p><a href="https://telegra.ph/老婆你快樂嗎4-08-29">老婆，你快樂嗎？4</a></p>
+<p><a href="https://telegra.ph/老婆你快樂嗎5-08-29">老婆，你快樂嗎？5</a></p>
+<p><a href="https://telegra.ph/同樂會-08-29">同樂會</a></p>
+<p><a href="https://telegra.ph/人體冰淇淋-08-29">人體冰淇淋</a></p>
+<p><a href="https://telegra.ph/人體冰淇淋2-08-29">人體冰淇淋2</a></p>
+<p><a href="https://telegra.ph/家庭教師的意外收獲-08-29">家庭教師的意外收獲</a></p>
+<p><a href="https://telegra.ph/家庭教師的意外收獲2-08-29">家庭教師的意外收獲2</a></p>
+<p><a href="https://telegra.ph/和老婆的兩個親姐姐作愛-08-29">和老婆的兩個親姐姐作愛</a></p>
+<p><a href="https://telegra.ph/蕩婦女教師小杏-08-29">蕩婦女教師小杏</a></p>
+<p><a href="https://telegra.ph/蕩婦女教師小杏2-08-29">蕩婦女教師小杏2</a></p>
+<p><a href="https://telegra.ph/蕩婦女教師小杏3-08-29">蕩婦女教師小杏3</a></p>
+<p><a href="https://telegra.ph/蕩婦女教師小杏4-08-29">蕩婦女教師小杏4</a></p>
+<p><a href="https://telegra.ph/蕩婦女教師小杏5-08-29">蕩婦女教師小杏5</a></p>
+<p><a href="https://telegra.ph/蕩婦女教師小杏6-08-29">蕩婦女教師小杏6</a></p>
+<p><a href="https://telegra.ph/盡職的母親-08-29">盡職的母親</a></p>
+<p><a href="https://telegra.ph/給姑丈弄上床-08-29">給姑丈弄上床</a></p>
+<p><a href="https://telegra.ph/媽媽的女助理-08-29">媽媽的女助理</a></p>
+<p><a href="https://telegra.ph/媽媽的女助理2-08-29">媽媽的女助理2</a></p>
+<p><a href="https://telegra.ph/嬸嬸與我-08-29">嬸嬸與我</a></p>
+<p><a href="https://telegra.ph/輪姦美少女-08-29">輪姦美少女</a></p>
+<p><a href="https://telegra.ph/輪姦美少女2-08-29">輪姦美少女2</a></p>
+<p><a href="https://telegra.ph/輪姦美少女3-08-29">輪姦美少女3</a></p>
+<p><a href="https://telegra.ph/機房奇遇夜-08-29">機房奇遇夜</a></p>
+<p><a href="https://telegra.ph/機房奇遇夜2-08-29">機房奇遇夜2</a></p>
+<p><a href="https://telegra.ph/薔薇和淫獸1-08-29">薔薇和淫獸(1)</a></p>
+<p><a href="https://telegra.ph/薔薇和淫獸12-08-29">薔薇和淫獸(1)2</a></p>
+<p><a href="https://telegra.ph/薔薇和淫獸13-08-29">薔薇和淫獸(1)3</a></p>
+<p><a href="https://telegra.ph/薔薇和淫獸14-08-29">薔薇和淫獸(1)4</a></p>
+<p><a href="https://telegra.ph/薔薇和淫獸15-08-29">薔薇和淫獸(1)5</a></p>
 </body>
 </html>
