--- a/小说频道总目录/短篇小说/menu.html
+++ b/小说频道总目录/短篇小说/menu.html
@@ -126,5 +126,206 @@
 <p><a href="https://telegra.ph/薔薇和淫獸13-08-29">薔薇和淫獸(1)3</a></p>
 <p><a href="https://telegra.ph/薔薇和淫獸14-08-29">薔薇和淫獸(1)4</a></p>
 <p><a href="https://telegra.ph/薔薇和淫獸15-08-29">薔薇和淫獸(1)5</a></p>
+<p><a href="https://telegra.ph/薔薇和淫獸16-08-29">薔薇和淫獸(1)6</a></p>
+<p><a href="https://telegra.ph/薔薇和淫獸17-08-29">薔薇和淫獸(1)7</a></p>
+<p><a href="https://telegra.ph/薔薇和淫獸2-08-29">薔薇和淫獸(2)</a></p>
+<p><a href="https://telegra.ph/薔薇和淫獸22-08-29">薔薇和淫獸(2)2</a></p>
+<p><a href="https://telegra.ph/薔薇和淫獸23-08-29">薔薇和淫獸(2)3</a></p>
+<p><a href="https://telegra.ph/薔薇和淫獸24-08-29">薔薇和淫獸(2)4</a></p>
+<p><a href="https://telegra.ph/薔薇和淫獸25-08-29">薔薇和淫獸(2)5</a></p>
+<p><a href="https://telegra.ph/薔薇和淫獸26-08-29">薔薇和淫獸(2)6</a></p>
+<p><a href="https://telegra.ph/兩生花-08-29">兩生花</a></p>
+<p><a href="https://telegra.ph/兩生花2-08-29">兩生花2</a></p>
+<p><a href="https://telegra.ph/舞男事件簿-08-29">舞男事件簿</a></p>
+<p><a href="https://telegra.ph/舞男事件簿2-08-29">舞男事件簿2</a></p>
+<p><a href="https://telegra.ph/舞男事件簿3-08-29">舞男事件簿3</a></p>
+<p><a href="https://telegra.ph/舞男事件簿4-08-29">舞男事件簿4</a></p>
+<p><a href="https://telegra.ph/舞男事件簿5-08-29">舞男事件簿5</a></p>
+<p><a href="https://telegra.ph/舞男事件簿6-08-29">舞男事件簿6</a></p>
+<p><a href="https://telegra.ph/舞男事件簿7-08-29">舞男事件簿7</a></p>
+<p><a href="https://telegra.ph/舞男事件簿8-08-29">舞男事件簿8</a></p>
+<p><a href="https://telegra.ph/舞男事件簿9-08-29">舞男事件簿9</a></p>
+<p><a href="https://telegra.ph/舞男事件簿10-08-29">舞男事件簿10</a></p>
+<p><a href="https://telegra.ph/SM迷情之戀-08-29">SM迷情之戀</a></p>
+<p><a href="https://telegra.ph/SM迷情之戀2-08-29">SM迷情之戀2</a></p>
+<p><a href="https://telegra.ph/趙康香港獨居記-08-29">趙康香港獨居記</a></p>
+<p><a href="https://telegra.ph/趙康香港獨居記2-08-29">趙康香港獨居記2</a></p>
+<p><a href="https://telegra.ph/趙康香港獨居記3-08-29">趙康香港獨居記3</a></p>
+<p><a href="https://telegra.ph/趙康香港獨居記4-08-29">趙康香港獨居記4</a></p>
+<p><a href="https://telegra.ph/關島淫蕩遊-08-29">關島淫蕩遊</a></p>
+<p><a href="https://telegra.ph/關島淫蕩遊2-08-29">關島淫蕩遊2</a></p>
+<p><a href="https://telegra.ph/關島淫蕩遊3-08-29">關島淫蕩遊3</a></p>
+<p><a href="https://telegra.ph/遙控震動器-08-29">遙控震動器</a></p>
+<p><a href="https://telegra.ph/雨中激情-08-29">雨中激情</a></p>
+<p><a href="https://telegra.ph/性愛魔術師-08-29">性愛魔術師</a></p>
+<p><a href="https://telegra.ph/性愛魔術師2-08-29">性愛魔術師2</a></p>
+<p><a href="https://telegra.ph/三代同床-08-29">三代同床</a></p>
+<p><a href="https://telegra.ph/野戰驚魂-08-29">野戰驚魂</a></p>
+<p><a href="https://telegra.ph/野戰驚魂2-08-29">野戰驚魂2</a></p>
+<p><a href="https://telegra.ph/和網絡老公做愛-08-29">和網絡老公做愛</a></p>
+<p><a href="https://telegra.ph/和網絡老公做愛2-08-29">和網絡老公做愛2</a></p>
+<p><a href="https://telegra.ph/我愛辣妹-08-29">我愛辣妹</a></p>
+<p><a href="https://telegra.ph/我愛辣妹2-08-29">我愛辣妹2</a></p>
+<p><a href="https://telegra.ph/我愛辣妹3-08-29">我愛辣妹3</a></p>
+<p><a href="https://telegra.ph/我愛辣妹4-08-29">我愛辣妹4</a></p>
+<p><a href="https://telegra.ph/我愛辣妹5-08-29">我愛辣妹5</a></p>
+<p><a href="https://telegra.ph/我愛辣妹6-08-29">我愛辣妹6</a></p>
+<p><a href="https://telegra.ph/我愛辣妹7-08-29">我愛辣妹7</a></p>
+<p><a href="https://telegra.ph/我愛辣妹8-08-29">我愛辣妹8</a></p>
+<p><a href="https://telegra.ph/我愛辣妹9-08-29">我愛辣妹9</a></p>
+<p><a href="https://telegra.ph/我愛辣妹10-08-29">我愛辣妹10</a></p>
+<p><a href="https://telegra.ph/我愛辣妹12-08-29">我愛辣妹12</a></p>
+<p><a href="https://telegra.ph/我愛辣妹13-08-29">我愛辣妹13</a></p>
+<p><a href="https://telegra.ph/擠車做愛實錄-08-29">擠車做愛實錄</a></p>
+<p><a href="https://telegra.ph/老公的陰謀-08-29">老公的陰謀</a></p>
+<p><a href="https://telegra.ph/人妻學妹擦槍走火-08-29">人妻學妹擦槍走火</a></p>
+<p><a href="https://telegra.ph/產前運動班-08-29">產前運動班</a></p>
+<p><a href="https://telegra.ph/產前運動班2-08-29">產前運動班2</a></p>
+<p><a href="https://telegra.ph/野性的呼喚-08-29">野性的呼喚</a></p>
+<p><a href="https://telegra.ph/野性的呼喚2-08-29">野性的呼喚2</a></p>
+<p><a href="https://telegra.ph/野性的呼喚3-08-29">野性的呼喚3</a></p>
+<p><a href="https://telegra.ph/影樓春色-08-29">影樓春色</a></p>
+<p><a href="https://telegra.ph/影樓春色2-08-29">影樓春色2</a></p>
+<p><a href="https://telegra.ph/人妻張太太-08-29">人妻張太太</a></p>
+<p><a href="https://telegra.ph/人妻張太太2-08-29">人妻張太太2</a></p>
+<p><a href="https://telegra.ph/女友偷歡記-08-29">女友偷歡記</a></p>
+<p><a href="https://telegra.ph/中年之愛-08-29">中年之愛</a></p>
+<p><a href="https://telegra.ph/山村少婦-08-29">山村少婦</a></p>
+<p><a href="https://telegra.ph/山村少婦2-08-29">山村少婦2</a></p>
+<p><a href="https://telegra.ph/一夫兩妻-08-29">一夫兩妻</a></p>
+<p><a href="https://telegra.ph/Cindy的第一次3P-08-29">Cindy的第一次3P</a></p>
+<p><a href="https://telegra.ph/幸福的夫妻遊戲-08-29">幸福的夫妻遊戲</a></p>
+<p><a href="https://telegra.ph/幸福的夫妻遊戲2-08-29">幸福的夫妻遊戲2</a></p>
+<p><a href="https://telegra.ph/幸福的夫妻遊戲3-08-29">幸福的夫妻遊戲3</a></p>
+<p><a href="https://telegra.ph/幸福的夫妻遊戲4-08-29">幸福的夫妻遊戲4</a></p>
+<p><a href="https://telegra.ph/幸福的夫妻遊戲5-08-29">幸福的夫妻遊戲5</a></p>
+<p><a href="https://telegra.ph/幸福的夫妻遊戲6-08-29">幸福的夫妻遊戲6</a></p>
+<p><a href="https://telegra.ph/上了正失戀的同事-08-29">上了正失戀的同事</a></p>
+<p><a href="https://telegra.ph/歡淫的男女-08-29">歡淫的男女</a></p>
+<p><a href="https://telegra.ph/歡淫的男女2-08-29">歡淫的男女2</a></p>
+<p><a href="https://telegra.ph/強暴劉璇-08-29">強暴劉璇</a></p>
+<p><a href="https://telegra.ph/女教師的姦情-08-29">女教師的姦情</a></p>
+<p><a href="https://telegra.ph/女教師的姦情2-08-29">女教師的姦情2</a></p>
+<p><a href="https://telegra.ph/女教師的姦情3-08-29">女教師的姦情3</a></p>
+<p><a href="https://telegra.ph/女教師的姦情4-08-29">女教師的姦情4</a></p>
+<p><a href="https://telegra.ph/女教師的姦情5-08-29">女教師的姦情5</a></p>
+<p><a href="https://telegra.ph/女教師的姦情6-08-29">女教師的姦情6</a></p>
+<p><a href="https://telegra.ph/失控的母子-08-29">失控的母子</a></p>
+<p><a href="https://telegra.ph/失控的母子2-08-29">失控的母子2</a></p>
+<p><a href="https://telegra.ph/雜交的快感-08-29">雜交的快感</a></p>
+<p><a href="https://telegra.ph/刺激的迷姦少女並肛交-08-29">刺激的迷姦少女並肛交</a></p>
+<p><a href="https://telegra.ph/火車卅六小時-08-29">火車卅六小時</a></p>
+<p><a href="https://telegra.ph/我的愛-08-29">我的愛</a></p>
+<p><a href="https://telegra.ph/我的愛2-08-29">我的愛2</a></p>
+<p><a href="https://telegra.ph/我的愛3-08-29">我的愛3</a></p>
+<p><a href="https://telegra.ph/我的愛4-08-29">我的愛4</a></p>
+<p><a href="https://telegra.ph/我的愛5-08-29">我的愛5</a></p>
+<p><a href="https://telegra.ph/小昭-08-29">小昭</a></p>
+<p><a href="https://telegra.ph/小昭2-08-29">小昭2</a></p>
+<p><a href="https://telegra.ph/小昭3-08-29">小昭3</a></p>
+<p><a href="https://telegra.ph/小昭4-08-29">小昭4</a></p>
+<p><a href="https://telegra.ph/小昭5-08-29">小昭5</a></p>
+<p><a href="https://telegra.ph/小昭6-08-29">小昭6</a></p>
+<p><a href="https://telegra.ph/小昭7-08-29">小昭7</a></p>
+<p><a href="https://telegra.ph/小昭8-08-29">小昭8</a></p>
+<p><a href="https://telegra.ph/小昭9-08-29">小昭9</a></p>
+<p><a href="https://telegra.ph/明星凌辱系列-何X雯-08-29">明星凌辱系列-何X雯</a></p>
+<p><a href="https://telegra.ph/明星凌辱系列-何X雯2-08-29">明星凌辱系列-何X雯2</a></p>
+<p><a href="https://telegra.ph/射精瞬間-08-29">射精瞬間</a></p>
+<p><a href="https://telegra.ph/女將-08-29">女將</a></p>
+<p><a href="https://telegra.ph/女將2-08-29">女將2</a></p>
+<p><a href="https://telegra.ph/女將3-08-29">女將3</a></p>
+<p><a href="https://telegra.ph/女將4-08-29">女將4</a></p>
+<p><a href="https://telegra.ph/女將5-08-29">女將5</a></p>
+<p><a href="https://telegra.ph/女將6-08-29">女將6</a></p>
+<p><a href="https://telegra.ph/校園鬼魅-08-29">校園鬼魅</a></p>
+<p><a href="https://telegra.ph/女老師Ｍ的下著-08-29">女老師Ｍ的下著</a></p>
+<p><a href="https://telegra.ph/女老師Ｍ的下著2-08-29">女老師Ｍ的下著2</a></p>
+<p><a href="https://telegra.ph/女老師Ｍ的下著3-08-29">女老師Ｍ的下著3</a></p>
+<p><a href="https://telegra.ph/女老師Ｍ的下著4-08-29">女老師Ｍ的下著4</a></p>
+<p><a href="https://telegra.ph/女老師Ｍ的下著6-08-29">女老師Ｍ的下著6</a></p>
+<p><a href="https://telegra.ph/姐夫出差了我和姐姐搞-08-29">姐夫出差了我和姐姐搞</a></p>
+<p><a href="https://telegra.ph/姐夫出差了我和姐姐搞2-08-29">姐夫出差了我和姐姐搞2</a></p>
+<p><a href="https://telegra.ph/姐夫出差了我和姐姐搞3-08-29">姐夫出差了我和姐姐搞3</a></p>
+<p><a href="https://telegra.ph/三人行必有我妻矣-08-29">三人行必有我妻矣</a></p>
+<p><a href="https://telegra.ph/三人行必有我妻矣2-08-29">三人行必有我妻矣2</a></p>
+<p><a href="https://telegra.ph/姣婆Maggie-08-29">姣婆Maggie</a></p>
+<p><a href="https://telegra.ph/亂倫自白-08-29">亂倫自白</a></p>
+<p><a href="https://telegra.ph/亂倫自白2-08-29">亂倫自白2</a></p>
+<p><a href="https://telegra.ph/看病奇遇-08-29">看病奇遇</a></p>
+<p><a href="https://telegra.ph/看病奇遇2-08-29">看病奇遇2</a></p>
+<p><a href="https://telegra.ph/笑傲江湖之岳夫人-08-29">笑傲江湖之岳夫人</a></p>
+<p><a href="https://telegra.ph/笑傲江湖之岳夫人2-08-29">笑傲江湖之岳夫人2</a></p>
+<p><a href="https://telegra.ph/笑傲江湖之岳夫人3-08-29">笑傲江湖之岳夫人3</a></p>
+<p><a href="https://telegra.ph/笑傲江湖之岳夫人4-08-29">笑傲江湖之岳夫人4</a></p>
+<p><a href="https://telegra.ph/笑傲江湖之岳夫人5-08-29">笑傲江湖之岳夫人5</a></p>
+<p><a href="https://telegra.ph/笑傲江湖之岳夫人6-08-29">笑傲江湖之岳夫人6</a></p>
+<p><a href="https://telegra.ph/幫助妻子去偷情上-08-29">幫助妻子去偷情(上)</a></p>
+<p><a href="https://telegra.ph/幫助妻子去偷情上2-08-29">幫助妻子去偷情(上)2</a></p>
+<p><a href="https://telegra.ph/幫助妻子去偷情上3-08-29">幫助妻子去偷情(上)3</a></p>
+<p><a href="https://telegra.ph/幫助妻子去偷情上4-08-29">幫助妻子去偷情(上)4</a></p>
+<p><a href="https://telegra.ph/幫助妻子去偷情上5-08-29">幫助妻子去偷情(上)5</a></p>
+<p><a href="https://telegra.ph/幫助妻子去偷情上6-08-29">幫助妻子去偷情(上)6</a></p>
+<p><a href="https://telegra.ph/幫助妻子去偷情下-08-29">幫助妻子去偷情(下)</a></p>
+<p><a href="https://telegra.ph/幫助妻子去偷情下2-08-29">幫助妻子去偷情(下)2</a></p>
+<p><a href="https://telegra.ph/幫助妻子去偷情下3-08-29">幫助妻子去偷情(下)3</a></p>
+<p><a href="https://telegra.ph/幫助妻子去偷情下4-08-29">幫助妻子去偷情(下)4</a></p>
+<p><a href="https://telegra.ph/幫助妻子去偷情下5-08-29">幫助妻子去偷情(下)5</a></p>
+<p><a href="https://telegra.ph/幫助妻子去偷情下6-08-29">幫助妻子去偷情(下)6</a></p>
+<p><a href="https://telegra.ph/淫蕩妹妹-08-29">淫蕩妹妹</a></p>
+<p><a href="https://telegra.ph/偷看女友日記讓我血脈奮漲-08-29">偷看女友日記讓我血脈奮漲</a></p>
+<p><a href="https://telegra.ph/偷看女友日記讓我血脈奮漲2-08-29">偷看女友日記讓我血脈奮漲2</a></p>
+<p><a href="https://telegra.ph/偷歡-08-29">偷歡</a></p>
+<p><a href="https://telegra.ph/玲你已睡了-08-29">玲，你已睡了？</a></p>
+<p><a href="https://telegra.ph/釣魚奇遇-08-29">釣魚奇遇</a></p>
+<p><a href="https://telegra.ph/老婆的姐姐-08-29">老婆的姐姐！</a></p>
+<p><a href="https://telegra.ph/與女友捷運性愛-08-29">與女友捷運性愛</a></p>
+<p><a href="https://telegra.ph/亂1-08-29">亂(1)</a></p>
+<p><a href="https://telegra.ph/亂13-08-29">亂(1)3</a></p>
+<p><a href="https://telegra.ph/亂2-08-29">亂(2)</a></p>
+<p><a href="https://telegra.ph/亂22-08-29">亂(2)2</a></p>
+<p><a href="https://telegra.ph/亂23-08-29">亂(2)3</a></p>
+<p><a href="https://telegra.ph/亂24-08-29">亂(2)4</a></p>
+<p><a href="https://telegra.ph/亂25-08-29">亂(2)5</a></p>
+<p><a href="https://telegra.ph/亂26-08-29">亂(2)6</a></p>
+<p><a href="https://telegra.ph/亂27-08-29">亂(2)7</a></p>
+<p><a href="https://telegra.ph/亂28-08-29">亂(2)8</a></p>
+<p><a href="https://telegra.ph/亂29-08-29">亂(2)9</a></p>
+<p><a href="https://telegra.ph/亂210-08-29">亂(2)10</a></p>
+<p><a href="https://telegra.ph/亂211-08-29">亂(2)11</a></p>
+<p><a href="https://telegra.ph/豐滿的肉體-08-29">豐滿的肉體</a></p>
+<p><a href="https://telegra.ph/無意中發現老婆偷情-08-29">無意中發現老婆偷情</a></p>
+<p><a href="https://telegra.ph/商界秘艷-08-29">商界秘艷</a></p>
+<p><a href="https://telegra.ph/商界秘艷2-08-29">商界秘艷2</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女-08-29">崩潰的聖女</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女2-08-29">崩潰的聖女2</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女3-08-29">崩潰的聖女3</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女4-08-29">崩潰的聖女4</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女6-08-29">崩潰的聖女6</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女7-08-29">崩潰的聖女7</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女8-08-29">崩潰的聖女8</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女9-08-29">崩潰的聖女9</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女10-08-29">崩潰的聖女10</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女11-08-29">崩潰的聖女11</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女12-08-29">崩潰的聖女12</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女13-08-29">崩潰的聖女13</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女14-08-29">崩潰的聖女14</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女15-08-29">崩潰的聖女15</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女16-08-29">崩潰的聖女16</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女17-08-29">崩潰的聖女17</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女18-08-29">崩潰的聖女18</a></p>
+<p><a href="https://telegra.ph/崩潰的聖女19-08-29">崩潰的聖女19</a></p>
+<p><a href="https://telegra.ph/藍領情緣-08-29">藍領情緣</a></p>
+<p><a href="https://telegra.ph/藍領情緣2-08-29">藍領情緣2</a></p>
+<p><a href="https://telegra.ph/藍領情緣3-08-29">藍領情緣3</a></p>
+<p><a href="https://telegra.ph/藍領情緣4-08-29">藍領情緣4</a></p>
+<p><a href="https://telegra.ph/藍領情緣5-08-29">藍領情緣5</a></p>
+<p><a href="https://telegra.ph/藍領情緣6-08-29">藍領情緣6</a></p>
+<p><a href="https://telegra.ph/藍領情緣7-08-29">藍領情緣7</a></p>
+<p><a href="https://telegra.ph/藍領情緣8-08-29">藍領情緣8</a></p>
+<p><a href="https://telegra.ph/超級女警-08-29">超級女警</a></p>
+<p><a href="https://telegra.ph/亂世淫女-08-29">亂世淫女</a></p>
+<p><a href="https://telegra.ph/情歸何處-08-29">情歸何處</a></p>
+
 </body>
 </html>
